[gd_scene load_steps=11 format=3 uid="uid://bk0ok7dhbcruf"]

[ext_resource type="Script" uid="uid://crub426w2dcig" path="res://scripts/ui/feedback_screen.gd" id="1_knyh8"]
[ext_resource type="Texture2D" uid="uid://d1j8jho5cgwcc" path="res://assets/nueva_interfaz/Fondo_Chat.svg" id="2_hutip"]
[ext_resource type="Script" uid="uid://bghjavy0eo3f7" path="res://scripts/ui/vertical_carousel_container.gd" id="2_k7o2x"]
[ext_resource type="Script" uid="uid://2cewafsho1n5" path="res://scripts/ui/vertical_carousel_node.gd" id="3_phfix"]
[ext_resource type="Theme" uid="uid://c0jcpjda3cxye" path="res://resource/styles/feedback_text.tres" id="4_1iffo"]
[ext_resource type="Texture2D" uid="uid://c75vyykpuo21l" path="res://assets/nueva_interfaz/Boton_Menu_Opciones.svg" id="4_d2ehq"]
[ext_resource type="Texture2D" uid="uid://ba7b5v2y8fvxu" path="res://assets/nueva_interfaz/Fondo_Opciones.svg" id="5_d2ehq"]
[ext_resource type="Script" uid="uid://b7c8g1uo4jfaq" path="res://scripts/nodes/animated_button.gd" id="6_myy66"]
[ext_resource type="Theme" uid="uid://ckm5gw1dv6pnl" path="res://resource/styles/settings.tres" id="7_myy66"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2ehq"]
bg_color = Color(0.1764706, 0.12156863, 0.20392157, 1)

[node name="FeedbackScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_knyh8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d2ehq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChoicesBG" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_hutip")
expand_mode = 1

[node name="Menu" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Feedback" type="MarginContainer" parent="MarginContainer/HBoxContainer/Menu"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="TextureRect" parent="MarginContainer/HBoxContainer/Menu/Feedback"]
layout_mode = 2
texture = ExtResource("5_d2ehq")
expand_mode = 1

[node name="FeedbackLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/Menu/Feedback/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_1iffo")
bbcode_enabled = true
text = "Retroalimentacion"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AddTo" type="Button" parent="MarginContainer/HBoxContainer/Menu"]
custom_minimum_size = Vector2(450, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("4_d2ehq")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("6_myy66")
metadata/_custom_type_script = "uid://b7c8g1uo4jfaq"

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Menu/AddTo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_myy66")
theme_override_font_sizes/font_size = 32
text = "Guardar Nota"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackToMenu" type="Button" parent="MarginContainer/HBoxContainer/Menu"]
custom_minimum_size = Vector2(450, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("4_d2ehq")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("6_myy66")
metadata/_custom_type_script = "uid://b7c8g1uo4jfaq"

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Menu/BackToMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_myy66")
theme_override_font_sizes/font_size = 32
text = "Volver al menu principal"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CarouselContainer" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(294, 349)
script = ExtResource("2_k7o2x")

[node name="CarouselNode" type="Control" parent="CarouselContainer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_phfix")

[connection signal="pressed" from="MarginContainer/HBoxContainer/Menu/AddTo" to="." method="_on_add_to_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Menu/BackToMenu" to="." method="_on_back_to_menu_pressed"]
